--- a/platform-common/pom.xml
+++ b/platform-common/pom.xml
@@ -28,7 +28,15 @@
         <!-- 工具库 -->
         <dependency>
             <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
+            <artifactId>hutool-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-json</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -37,6 +45,11 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
         </dependency>
         
         <!-- JSON处理 -->
@@ -74,4 +87,4 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-</project> 
+</project>
