--- a/platform-dependencies/pom.xml
+++ b/platform-dependencies/pom.xml
@@ -16,39 +16,54 @@
 
     <properties>
         <!-- Spring相关版本 -->
-        <spring-boot.version>3.2.3</spring-boot.version>
-        <spring-cloud.version>2023.0.0</spring-cloud.version>
+        <spring-boot.version>3.2.9</spring-boot.version>
+        <spring-cloud.version>2023.0.2</spring-cloud.version>
         <spring-cloud-alibaba.version>2022.0.0.0</spring-cloud-alibaba.version>
         
         <!-- 数据库相关 -->
         <mysql.version>8.3.0</mysql.version>
-        <postgresql.version>42.7.1</postgresql.version>
+        <postgresql.version>42.7.2</postgresql.version>
         <mongodb.version>4.11.1</mongodb.version>
         <redis.version>3.2.1</redis.version>
+        <milvus.version>2.3.3</milvus.version>
+        <r2dbc.version>1.0.1.RELEASE</r2dbc.version>
         
         <!-- 工具库 -->
-        <hutool.version>5.8.25</hutool.version>
-        <guava.version>32.1.2-jre</guava.version>
+        <hutool.version>5.8.26</hutool.version>
+        <guava.version>33.0.0-jre</guava.version>
         <commons-lang3.version>3.14.0</commons-lang3.version>
         <commons-io.version>2.15.1</commons-io.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
+        <lombok.version>1.18.32</lombok.version>
         
         <!-- 响应式编程 -->
-        <reactor.version>3.6.2</reactor.version>
+        <reactor.version>3.6.3</reactor.version>
+        
+        <!-- 消息队列 -->
+        <kafka.version>3.7.0</kafka.version>
+        <rocketmq.version>5.2.0</rocketmq.version>
+        
+        <!-- 服务治理 -->
+        <resilience4j.version>2.2.0</resilience4j.version>
+        <sentinel.version>1.8.7</sentinel.version>
         
         <!-- 日志与监控 -->
         <logback.version>1.4.14</logback.version>
-        <micrometer.version>1.12.2</micrometer.version>
-        <opentelemetry.version>1.32.0</opentelemetry.version>
+        <micrometer.version>1.12.3</micrometer.version>
+        <opentelemetry.version>1.35.0</opentelemetry.version>
+        <prometheus.version>0.16.0</prometheus.version>
+        
+        <!-- JSON处理 -->
+        <jackson.version>2.16.2</jackson.version>
         
         <!-- 安全框架 -->
-        <spring-security.version>6.2.1</spring-security.version>
+        <spring-security.version>6.2.3</spring-security.version>
         <oauth2.version>1.1.2</oauth2.version>
         
         <!-- 测试框架 -->
-        <junit-jupiter.version>5.10.1</junit-jupiter.version>
-        <mockito.version>5.8.0</mockito.version>
-        <testcontainers.version>1.19.3</testcontainers.version>
+        <junit-jupiter.version>5.10.2</junit-jupiter.version>
+        <mockito.version>5.10.0</mockito.version>
+        <testcontainers.version>1.19.6</testcontainers.version>
     </properties>
 
     <dependencyManagement>
@@ -80,10 +95,98 @@
                 <scope>import</scope>
             </dependency>
             
+            <!-- Resilience4j BOM -->
+            <dependency>
+                <groupId>io.github.resilience4j</groupId>
+                <artifactId>resilience4j-bom</artifactId>
+                <version>${resilience4j.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            
+            <!-- Testcontainers BOM -->
+            <dependency>
+                <groupId>org.testcontainers</groupId>
+                <artifactId>testcontainers-bom</artifactId>
+                <version>${testcontainers.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            
+            <!-- 数据库相关 -->
+            <dependency>
+                <groupId>com.mysql</groupId>
+                <artifactId>mysql-connector-j</artifactId>
+                <version>${mysql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+                <version>${postgresql.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.milvus</groupId>
+                <artifactId>milvus-sdk-java</artifactId>
+                <version>${milvus.version}</version>
+            </dependency>
+            
+            <!-- 响应式数据库 -->
+            <dependency>
+                <groupId>io.r2dbc</groupId>
+                <artifactId>r2dbc-pool</artifactId>
+                <version>${r2dbc.version}</version>
+            </dependency>
+            
+            <!-- 消息队列 -->
+            <dependency>
+                <groupId>org.apache.kafka</groupId>
+                <artifactId>kafka-clients</artifactId>
+                <version>${kafka.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-client-java</artifactId>
+                <version>${rocketmq.version}</version>
+            </dependency>
+            
+            <!-- 监控 -->
+            <dependency>
+                <groupId>io.micrometer</groupId>
+                <artifactId>micrometer-registry-prometheus</artifactId>
+                <version>${prometheus.version}</version>
+            </dependency>
+            
+            <!-- JSON处理 -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
+            
             <!-- 工具库 -->
             <dependency>
                 <groupId>cn.hutool</groupId>
-                <artifactId>hutool-all</artifactId>
+                <artifactId>hutool-core</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-json</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-crypto</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-http</artifactId>
                 <version>${hutool.version}</version>
             </dependency>
             <dependency>
@@ -111,6 +214,11 @@
                 <artifactId>mapstruct-processor</artifactId>
                 <version>${mapstruct.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombok.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-</project> 
+</project>
