--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
 
     <build>
         <pluginManagement>
@@ -82,18 +90,10 @@
                         <release>${java.version}</release>
                         <encoding>UTF-8</encoding>
                         <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                        <annotationProcessorPaths>
-                            <path>
-                                <groupId>org.projectlombok</groupId>
-                                <artifactId>lombok</artifactId>
-                                <version>1.18.32</version>
-                            </path>
-                            <path>
-                                <groupId>org.mapstruct</groupId>
-                                <artifactId>mapstruct-processor</artifactId>
-                                <version>1.5.5.Final</version>
-                            </path>
-                        </annotationProcessorPaths>
+                        <compilerArgs>
+                            <arg>-Xlint:unchecked</arg>
+                            <arg>-proc:none</arg>
+                        </compilerArgs>
                     </configuration>
                 </plugin>
                 <plugin>
