--- a/excel-framework-core/pom.xml
+++ b/excel-framework-core/pom.xml
@@ -67,8 +67,8 @@
 
         <!-- JSON处理 -->
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
         </dependency>
 
         <!-- Jackson YAML处理 -->
