--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,301 @@
-# Compiled class file
+# ========================
+# 项目通用忽略文件
+# ========================
+
+# 系统文件
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# IDE 相关文件
+## IntelliJ IDEA
+.idea/
+*.iws
+*.iml
+*.ipr
+out/
+.idea_modules/
+
+## VSCode
+.vscode/
+*.code-workspace
+
+## Eclipse
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.project
+.externalToolBuilders/
+.cproject
+.autotools
+
+## NetBeans
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+
+# ========================
+# Java / SpringBoot 相关
+# ========================
 *.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
 *.war
-*.nar
 *.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+*.jar
 hs_err_pid*
 replay_pid*
+
+## Maven
+target/
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+buildNumber.properties
+.mvn/timing.properties
+.mvn/wrapper/maven-wrapper.jar
+
+## Gradle
+.gradle
+**/build/
+!src/**/build/
+gradle-app.setting
+!gradle-wrapper.jar
+!gradle-wrapper.properties
+.gradletasknamecache
+
+## Spring Boot
+application-local.properties
+application-local.yml
+application-dev.properties
+application-dev.yml
+*.log
+logs/
+
+# ========================
+# Node.js / Vue 相关
+# ========================
+## 依赖
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+## 环境变量
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+## 构建产物
+dist/
+dist-ssr/
+*.local
+
+## Vue / Vite
+.vite/
+.nuxt/
+.output/
+.vercel/
+
+## 测试覆盖率
+coverage/
+*.lcov
+.nyc_output/
+
+# ========================
+# Python 相关
+# ========================
+## 字节码
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+## 分发/打包
+.Python
+build/
+develop-eggs/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+## PyInstaller
+*.manifest
+*.spec
+
+## 单元测试
+htmlcov/
+.tox/
+.nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+cover/
+
+## 环境
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+## Jupyter Notebook
+.ipynb_checkpoints
+
+## IPython
+profile_default/
+ipython_config.py
+
+## Celery
+celerybeat-schedule
+celerybeat.pid
+
+## Spyder
+.spyderproject
+.spyproject
+
+## Rope
+.ropeproject
+
+## mkdocs
+/site
+
+## mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+## Pyre
+.pyre/
+
+## pytype
+.pytype/
+
+# ========================
+# 数据库相关
+# ========================
+## SQLite
+*.sqlite
+*.sqlite3
+*.db
+
+## MySQL dump
+*.sql
+!schema.sql
+!init.sql
+
+## PostgreSQL
+*.dump
+
+## H2 数据库
+*.h2.db
+
+# ========================
+# Shell 脚本相关
+# ========================
+## 临时文件
+*.tmp
+*.temp
+
+## 日志文件
+*.log
+
+# ========================
+# 文档相关
+# ========================
+## LaTeX
+*.aux
+*.fdb_latexmk
+*.fls
+*.log
+*.synctex.gz
+*.toc
+
+## Word 临时文件
+~$*.doc*
+~$*.xls*
+~$*.ppt*
+
+# ========================
+# 容器化相关
+# ========================
+## Docker
+.dockerignore
+docker-compose.override.yml
+
+# ========================
+# 配置和敏感信息
+# ========================
+## 密钥和配置
+*.key
+*.pem
+*.p12
+.env.production
+.env.staging
+secrets/
+config/local/
+
+## 备份文件
+*.backup
+*.bak
+*~
+
+# ========================
+# 其他工具
+# ========================
+## Terraform
+*.tfstate
+*.tfstate.*
+.terraform/
+.terraform.lock.hcl
+
+## SonarQube
+.scannerwork/
+
+## 临时目录
+temp/
+tmp/
+cache/
+.cache/
+
+## 性能分析
+*.prof
